@@ -2,6 +2,8 @@
 
 	* testsuite: reorganised UTF-8 files, added GBK encoding files,
 	  moved encoding-specific files to 'tar.gz' archives.
+	* run-tests.py: Adapted to the above change.
+	* run-tests.sh: removed.
 	* run-tests.py: Don't assume utf-8, use preferred encoding 
 	  instead.
 	* s3cmd, S3/Utils.py, S3/Exceptions.py, S3/Progress.py,
